test/samples/linear/valid/struct-literal-silent-discard-outer.crust
struct lin_point {
    int x;
    int y;
};

char main() {

    // This is fine, nothing gets silent discarded
    {struct lin_point -> 1,2};

    return 'a';
} 
