test/samples/linear/invalid/silent-discard-ident.crust
int main() {
    
    linear int a;

    a;

    return 0;
} 
